--- a/srcs/.env
+++ b/srcs/.env
@@ -1,13 +1,17 @@
+#NGINX
+DOMAIN_NAME=maabidal.42.fr
+CERTS_=/etc/ssl/certs/nginx-selfsigned.crt
+
 # DB
 DB_NAME=Inception
 DB_ROOT_PASSWD=12345
-DB_USER=anguinau
+DB_USER=maabidal
 DB_USER_PASSWD=123
 
 # WordPress
-WP_ADMIN_MAIL=42@anguinau.fr
+WP_ADMIN_MAIL=42@maabidal.fr
 WP_ADMIN_USR=42
 WP_ADMIN_PASSWD=54321
-WP_USR_MAIL=user@anguinau.fr
+WP_USR_MAIL=user@maabidal.fr
 WP_USER_NAME=user
 WP_USR_PASSWD=321
