--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,14 +1,19 @@
 ; On indique que cette configuration s'applique au pool 'www'.
 [www]
 ; On définit l'user/groupe sous lequel PHP-FPM s'exécute.
-user = php
-group = php
+user = www-data
+group = www-data
+
+; Defini les comportement de log
+php_admin_value[error_log] = /dev/stdout
+php_admin_flag[log_errors] = on
+
 
 ; On définit le port d'écoute de PHP-FPM.
 listen = 9000
 ; On définit l'user/groupe propriétaire du socket d'écoute PHP-FPM.
-listen.owner = php
-listen.group = php
+listen.owner = www-data
+listen.group = www-data
 
 ; On définit le mode de gestion des processus PHP-FPM.
 ; dynamic = ajusté automatiquement en fonction de la charge du serveur.
