added "STOPSIGNAL SIGTERM" to handle stop docker signal

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,6 +1,8 @@
 # On part d'Alpine 3.16.
 FROM		alpine:3.16
 
+STOPSIGNAL SIGTERM
+
 # On installe les dépendances de notre conteneur.
 RUN			apk update --no-cache		\
 			&& apk upgrade --no-cache	\
